--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ jdk: oraclejdk8
 branches:
   only:
   - master
+addons:
+  sonarcloud:
+    organization: "crerader-github"
+    token:
+      secure: $SONARTOKEN
 script:
 - "./mvnw clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar"
 after_deploy:
