--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
             <version>3.0.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>spring-mock-mvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-model</artifactId>
+            <version>2.0.20</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
